<resources>
  <string name="app_name">Phoenix (Testnet)</string>
  <string name="notification_channels_watcher_title">Background watcher</string>
  <string name="notification_channels_watcher_desc">Alerts you if you need to start the app. Should be high priority.</string>
  <string name="notification_pay_to_open_missed_title">Missed payment notifications</string>
  <string name="notification_pay_to_open_missed_desc">Notifies you when an incoming payment has failed because automatic on-the-fly channel creation has been disabled.</string>
  <string name="notification_headless_title">Phoenix running in background</string>
  <string name="notification_headless_desc">Notifies you that Phoenix is running in background. This happens when someone is sending you money and the app is not already started.</string>
  <string name="autocreate_generating">Creating your wallet…</string>
  <string name="autocreate_error">We could not create your wallet.\nReason: %1$s</string>
  <string name="restore_disclaimer_message">Do not import a seed that was NOT created by this application.\n\nAlso, make sure that you don\'t have another Phoenix wallet running with the same seed.</string>
  <string name="restore_disclaimer_checkbox">I understand.</string>
  <string name="restore_disclaimer_next">Next</string>
  <string name="restore_instructions">Your wallet\'s seed is a list of 12 english words.</string>
  <string name="restore_mnemonics_label">Use the keyboard below to enter the seed:</string>
  <string name="restore_in_progress">Restoring your wallet…</string>
  <string name="restore_import_button">Import</string>
  <string name="restore_error">This seed is invalid and cannot be imported.\n\nPlease try again</string>
  <string name="authprompt_title">Unlock to continue</string>
  <string name="authprompt_hard_negative">Cancel</string>
  <string name="authprompt_error_unsecure">Device is not secure (code: %1$d)</string>
  <string name="pindialog_title_default">Please enter your PIN</string>
  <string name="pindialog_pwd_placeholder" translatable="false">●●●●●●</string>
  <string name="pindialog_error">PIN code must be a 6 digits number.</string>
  <string name="pindialog_error_donotmatch">PIN codes do not match.</string>
  <string name="biometricprompt_title">Wallet is locked</string>
  <string name="biometricprompt_negative">Unlock with PIN</string>
  <string name="lipsum_short" translatable="false">Etiam porttitor egestas faucibus. Curabitur condimentum eros non ipsum elementum egestas.</string>
  <string name="lipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean ut facilisis lectus. Integer massa tellus, suscipit sit amet felis vitae, blandit consectetur dolor. Fusce volutpat id magna id vestibulum. Integer a erat lacinia, placerat risus a, fermentum justo. Etiam euismod tincidunt dolor vel posuere. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur non euismod dui. Morbi enim dui, blandit sed erat sit amet, porta pulvinar odio. Cras metus felis, vestibulum eu consequat vitae, consectetur quis nulla. Fusce vulputate, elit et luctus sodales, metus metus elementum sem, eget commodo nunc nunc in ex. Sed aliquam eros nibh, ac volutpat turpis accumsan vitae. Cras suscipit ipsum accumsan aliquam interdum.</string>
  <string name="lipsum_long" translatable="false">
    Praesent ut nisi fringilla, pharetra dui sit amet, ornare urna. Donec at ultrices nunc. Fusce gravida metus vitae viverra egestas. In hac habitasse platea dictumst. Proin consequat fringilla felis, vehicula vehicula turpis ullamcorper nec. Pellentesque urna massa, blandit cursus metus et, ultrices consectetur neque. Suspendisse hendrerit venenatis mi ac tincidunt. Morbi hendrerit orci vitae erat luctus, at dignissim turpis accumsan. Integer elementum est eu tincidunt ullamcorper. Phasellus varius porttitor vestibulum. Maecenas faucibus ullamcorper diam, ac commodo dui fringilla sed. Aliquam arcu velit, porta eu sem vel, rhoncus bibendum dolor.
    \nEtiam porttitor egestas faucibus. Curabitur condimentum eros non ipsum elementum egestas. Nam tempor euismod erat eget scelerisque. Integer sit amet laoreet erat. Duis enim turpis, vehicula eu justo vitae, dapibus auctor mauris. Aenean euismod eleifend dui a aliquet. Aliquam eleifend malesuada tortor ornare volutpat. In augue tortor, gravida et volutpat elementum, iaculis non sapien. Etiam dolor nisi, pulvinar a rhoncus ac, eleifend ac libero. In lobortis enim vitae ultricies viverra. Maecenas accumsan elementum sem, nec pharetra urna maximus maximus.
    \nIn sit amet volutpat ligula, ac pretium dolor. Phasellus posuere rhoncus magna quis fermentum. Ut risus turpis, fermentum facilisis mollis in, porttitor eget erat. Donec luctus egestas ligula et interdum. Phasellus vitae hendrerit sem, at vehicula nulla. Curabitur mollis risus quis metus euismod ullamcorper. Nam eu aliquet mi. Duis id urna ac urna iaculis blandit. Morbi eros dui, congue a posuere efficitur, imperdiet a nisi. Morbi non orci non lorem aliquet tincidunt. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce pulvinar, mi vitae sollicitudin dignissim, nunc urna facilisis massa, ut scelerisque mi felis in sapien.
    \nNam felis felix, tristique commodo odio eget, imperdiet viverra erat. Donec venenatis magna pulvinar, finibus leo id, gravida augue. Integer ante leo, bibendum ac nibh quis, auctor commodo quam. Sed luctus vitae quam vel condimentum. Mauris eu rhoncus mauris. Fusce enim diam, consequat a odio sit amet, accumsan cursus nisl. Etiam lectus nunc, lacinia id purus sit amet, pulvinar auctor odio. Maecenas vitae arcu sit amet est cursus maximus. Nullam ac sapien non nibh tempor rhoncus. Mauris dignissim cursus libero quis egestas.
  </string>
  <string name="startup_unlock_required">Phoenix is locked.\nPlease authenticate to continue.</string>
  <string name="startup_unlock_button">Unlock</string>
  <string name="startup_binding_service">Binding service…</string>
  <string name="startup_wait">Loading…</string>
  <string name="startup_wait_tor">Starting Tor…</string>
  <string name="startup_start_button">Restart</string>
  <string name="startup_settings_button">Settings</string>
  <string name="startup_error_generic">The application could not start.\n\nError details: %1$s</string>
  <string name="startup_error_electrum_address">The application could not start. The address of the custom Electrum server is not valid.\n\nGo to Settings > Electrum to fix your settings.</string>
  <string name="startup_error_tor">The Tor service could not start. Check that your connection is working and try again.\n\nError details: %1$s</string>
  <string name="startup_error_unreadable">Wallet data could not be read, please restart the application</string>
  <string name="startup_error_network">Your internet connection is not working. Please check your WiFi or cellular network.</string>
  <string name="startup_error_wrong_pwd">PIN is incorrect</string>
  <string name="startup_error_biometrics">Biometric authentication has failed.</string>
  <string name="startup_error_no_biometrics_or_key_invalidated">Enroll a fingerprint in Android first to unlock the wallet.\n\nOtherwise, restore your wallet using your 12-words seed backup.</string>
  <string name="startup_error_auth_failed">Authentication failed.</string>
  <string name="startup_error_auth_failed_with_details">Authentication failed.\n—\n%1$s</string>
  <string name="paymentholder_sending">Sending…</string>
  <string name="paymentholder_processing">Processing…</string>
  <string name="paymentholder_waiting">Waiting…</string>
  <string name="paymentholder_failed">Failed</string>
  <string name="paymentholder_sent_prefix">-</string>
  <string name="paymentholder_received_prefix">+</string>
  <string name="paymentholder_no_desc">No description</string>
  <string name="paymentholder_closing_desc">Closing #%1$s</string>
  <string name="paymentholder_swap_in_desc">On-chain payment to %1$s</string>
  <string name="receive_edit_title">Edit my invoice</string>
  <string name="settings_general_title">General</string>
  <string name="settings_display_prefs">Display</string>
  <string name="settings_security_title">Security</string>
  <string name="settings_display_seed">Recovery phrase</string>
  <string name="settings_access_control">App access settings</string>
  <string name="settings_advanced_title">Advanced</string>
  <string name="settings_list_channels">Channels list</string>
  <string name="settings_logs">Logs</string>
  <string name="settings_electrum">Electrum server</string>
  <string name="settings_mutual_close">Close all channels</string>
  <string name="settings_force_close">Danger zone</string>
  <string name="settings_tor">Tor</string>
  <string name="settings_about">About</string>
  <string name="settings_payment_settings">Payment options and fees</string>
  <string name="closechannels_checking_channels">Checking channels, please hold…</string>
  <string name="closechannels_channels_none">You currently don\'t have any channels that could be emptied.\n\nGo to the \'List channels\' page to see the state of your channels.</string>
  <string name="closechannels_force_title">Force close</string>
  <string name="closechannels_force_instructions"><![CDATA[
    Force close allows you to unilaterally close your channels.
    <br/><br/>
    This feature is not a &quot;fix everything magic button&quot;; it is here as a safety measure and <b>should only be used in extreme scenarios</b>. For example, if your peer (ACINQ) disappears permanently, preventing you from spending your money. In all other cases, <b>if you experience issues with Phoenix you should contact support</b>.
    <br/><br/>
    Force closing channels will cost you money (to cover the on-chain fees) and will cause your funds to be locked for days. <b>Do not uninstall the app until your channels are fully closed or you will lose money.</b>
    <br/><br/>
    <b>Do not use this feature if you don\'t fully understand what it does.</b>
  ]]></string>
  <string name="closechannels_force_button">Force close channels</string>
  <string name="closechannels_message_error">There was a problem. Please try again later.</string>
  <string name="closechannels_message_done">Funds sent.</string>
  <string name="closechannels_message_in_progress">Please wait…</string>
  <string name="menu_settings">Settings</string>
  <string name="accessctrl_title">Security</string>
  <string name="accessctrl_subtitle">We recommend enabling the screen lock to prevent unintended use of your wallet.</string>
  <string name="accessctrl_auth_none_enrolled">Please enroll a PIN/Schema/Fingerprint in Android first.</string>
  <string name="accessctrl_screen_lock_switch">Screen lock</string>
  <string name="accessctrl_screen_lock_switch_desc">Lock access to the app with Android\'s screen lock/fingerprint</string>
  <string name="accessctrl_full_lock_switch_unavailable">Enroll a fingerprint in Android for additional security features.</string>
  <string name="accessctrl_full_lock_switch_backup_required">Confirm that you\'ve backed up your recovery phrase for additional security features.</string>
  <string name="accessctrl_full_lock_switch_backup_required_button">Access my recovery phrase</string>
  <string name="accessctrl_full_lock_switch">Prevent background execution</string>
  <string name="accessctrl_full_lock_switch_desc">App requires manual user unlock to run. Autonomous background payment reception is therefore not possible.\n\nOnly fingerprint authentication is supported. If your fingerprints are modified, you\'ll need to reinitialize Phoenix with your seed. Make sure to have a backup!</string>
  <string name="prefs_display_coin_label">Bitcoin unit</string>
  <string name="prefs_display_fiat_label">Fiat currency</string>
  <string name="prefs_display_theme_label">Application theme</string>
</resources>