<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2019 ACINQ SAS
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".legacy.settings.SettingsFragment">

    <fr.acinq.phoenix.legacy.utils.customviews.ActionBarView
      android:id="@+id/action_bar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toTopOf="parent"
      app:title="@string/menu_settings" />

    <ScrollView
      android:layout_width="match_parent"
      android:layout_height="0dp"
      app:layout_constrainedHeight="true"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/action_bar">

      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/bgColor">

        <TextView
          android:id="@+id/general_title"
          style="@style/SettingsCategory"
          android:text="@string/settings_general_title"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

        <fr.acinq.phoenix.legacy.utils.customviews.ButtonView
          android:id="@+id/about_button"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@drawable/button_bg_square"
          android:padding="@dimen/space_md"
          app:hz_bias="0"
          app:icon="@drawable/ic_help_circle"
          app:layout_constraintTop_toBottomOf="@id/general_title"
          app:spacer_size="@dimen/space_md"
          app:text="@string/settings_about" />

        <fr.acinq.phoenix.legacy.utils.customviews.ButtonView
          android:id="@+id/prefs_display_button"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@drawable/button_bg_square"
          android:padding="@dimen/space_md"
          app:hz_bias="0"
          app:icon="@drawable/ic_brush"
          app:layout_constraintTop_toBottomOf="@id/about_button"
          app:spacer_size="@dimen/space_md"
          app:text="@string/settings_display_prefs" />

        <fr.acinq.phoenix.legacy.utils.customviews.ButtonView
          android:id="@+id/electrum_button"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@drawable/button_bg_square"
          android:padding="@dimen/space_md"
          app:hz_bias="0"
          app:icon="@drawable/ic_chain"
          app:layout_constraintTop_toBottomOf="@id/prefs_display_button"
          app:spacer_size="@dimen/space_md"
          app:text="@string/settings_electrum" />

        <fr.acinq.phoenix.legacy.utils.customviews.ButtonView
          android:id="@+id/tor_button"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@drawable/button_bg_square"
          android:padding="@dimen/space_md"
          app:hz_bias="0"
          app:icon="@drawable/ic_tor_shield"
          app:layout_constraintTop_toBottomOf="@id/electrum_button"
          app:spacer_size="@dimen/space_md"
          app:text="@string/settings_tor" />

        <fr.acinq.phoenix.legacy.utils.customviews.ButtonView
          android:id="@+id/payment_settings_button"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@drawable/button_bg_square"
          android:padding="@dimen/space_md"
          app:hz_bias="0"
          app:icon="@drawable/ic_tool"
          app:layout_constraintTop_toBottomOf="@id/tor_button"
          app:spacer_size="@dimen/space_md"
          app:text="@string/settings_payment_settings" />

        <TextView
          android:id="@+id/security_title"
          style="@style/SettingsCategory"
          android:text="@string/settings_security_title"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/payment_settings_button" />

        <fr.acinq.phoenix.legacy.utils.customviews.ButtonView
          android:id="@+id/access_control_button"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@drawable/button_bg_square"
          android:padding="@dimen/space_md"
          app:hz_bias="0"
          app:icon="@drawable/ic_unlock"
          app:layout_constraintTop_toBottomOf="@id/security_title"
          app:spacer_size="@dimen/space_md"
          app:text="@string/settings_access_control" />

        <fr.acinq.phoenix.legacy.utils.customviews.ButtonView
          android:id="@+id/display_seed_button"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@drawable/button_bg_square"
          android:padding="@dimen/space_md"
          app:hz_bias="0"
          app:icon="@drawable/ic_key"
          app:layout_constraintTop_toBottomOf="@id/access_control_button"
          app:spacer_size="@dimen/space_md"
          app:text="@string/settings_display_seed" />

        <TextView
          android:id="@+id/migration_title"
          style="@style/SettingsCategory"
          android:text="@string/settings_migration_title"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/display_seed_button" />

        <fr.acinq.phoenix.legacy.utils.customviews.ButtonView
          android:id="@+id/upgrade_button"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@drawable/button_bg_square"
          android:padding="@dimen/space_md"
          app:hz_bias="0"
          app:icon="@drawable/ic_fire"
          app:layout_constraintTop_toBottomOf="@id/migration_title"
          app:spacer_size="@dimen/space_md"
          app:text="@string/settings_upgrade" />

        <TextView
          android:id="@+id/advanced_title"
          style="@style/SettingsCategory"
          android:text="@string/settings_advanced_title"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/upgrade_button" />

        <fr.acinq.phoenix.legacy.utils.customviews.ButtonView
          android:id="@+id/list_all_channels_button"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@drawable/button_bg_square"
          android:padding="@dimen/space_md"
          app:hz_bias="0"
          app:icon="@drawable/ic_zap"
          app:layout_constraintTop_toBottomOf="@id/advanced_title"
          app:spacer_size="@dimen/space_md"
          app:text="@string/settings_list_channels" />

        <fr.acinq.phoenix.legacy.utils.customviews.ButtonView
          android:id="@+id/logs_button"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@drawable/button_bg_square"
          android:padding="@dimen/space_md"
          app:hz_bias="0"
          app:icon="@drawable/ic_text"
          app:layout_constraintTop_toBottomOf="@id/list_all_channels_button"
          app:spacer_size="@dimen/space_md"
          app:text="@string/settings_logs" />

        <fr.acinq.phoenix.legacy.utils.customviews.ButtonView
          android:id="@+id/mutual_close_button"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@drawable/button_bg_square"
          android:padding="@dimen/space_md"
          app:hz_bias="0"
          app:icon="@drawable/ic_cross_circle"
          app:layout_constraintTop_toBottomOf="@id/logs_button"
          app:spacer_size="@dimen/space_md"
          app:text="@string/settings_mutual_close" />

        <fr.acinq.phoenix.legacy.utils.customviews.ButtonView
          android:id="@+id/force_close_button"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@drawable/button_bg_square"
          android:padding="@dimen/space_md"
          app:hz_bias="0"
          app:icon="@drawable/ic_alert_triangle"
          app:icon_tint="?attr/negativeColor"
          app:layout_constraintTop_toBottomOf="@id/mutual_close_button"
          app:spacer_size="@dimen/space_md"
          app:text="@string/settings_force_close"
          app:text_color="?attr/negativeColor" />

      </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
